--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
            <div class="project-tile">
             <figure>
                 <img src="images/landing-page-img.jpg"  alt="landing page project">
-                <figcaption><a href="" target="_blank">Landing Page</a></figcaption>
+                <figcaption><a href="https://github.com/reanabrethen/LandingPage/blob/main/index.html" target="_blank">Landing Page</a></figcaption>
             </figure>
            </div>
 
